Feature/274 release guide (#276)
* Added implementation incl. requirements and documentation
Co-authored-by: Christoph Pirkl <christoph.pirkl@exasol.com>