@@ -1,10 +1,12 @@
 package com.exasol.releasedroid.main;
 
-import static com.exasol.releasedroid.usecases.ReleaseDroidConstants.*;
+import static com.exasol.releasedroid.usecases.ReleaseDroidConstants.HOME_DIRECTORY;
+import static com.exasol.releasedroid.usecases.ReleaseDroidConstants.RELEASE_DROID_CREDENTIALS;
 
 import java.io.IOException;
 import java.io.InputStream;
-import java.nio.file.*;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.*;
 import java.util.logging.LogManager;
 import java.util.logging.Logger;
@@ -35,7 +37,6 @@ import com.exasol.releasedroid.usecases.validate.ValidateInteractor;
 public class Runner {
 
     private static final Logger LOGGER = Logger.getLogger(Runner.class.getName());
-    private static final String RELEASE_DROID_CREDENTIALS = RELEASE_DROID_DIRECTORY + FILE_SEPARATOR + "credentials";
     private static final String REPORT_PATH = HOME_DIRECTORY + "/.release-droid";
     private static final String REPORT_NAME = "last_report.txt";
     private static final String USER_GUIDE_URL = "https://github.com/exasol/release-droid/blob/main/doc/user_guide/user_guide.md";
@@ -53,7 +54,7 @@ public class Runner {
     }
 
     static ReleaseDroid createReleaseDroid() {
-        checkCredentialsFile(Paths.get(RELEASE_DROID_CREDENTIALS));
+        checkCredentialsFile(Path.of(RELEASE_DROID_CREDENTIALS));
         final GitHubGateway githubGateway = new GitHubAPIAdapter(new GitHubConnectorImpl(getPropertyReader()));
         final RepositoryGateway repositoryGateway = new RepositoryFactory(githubGateway);
         final Map<PlatformName, ReleaseMaker> releaseMakers = createReleaseMakers(githubGateway);
